--- a/src/client/app/layout/ht-top-nav.html
+++ b/src/client/app/layout/ht-top-nav.html
@@ -1,15 +1,19 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="navbar-header">
-        <a ui-sref="home" class="navbar-brand"><span class="brand-title"><span class="fa fa-fire"></span>  {{vm.navline.title}} <span class="fa fa-bolt"></span></span></a>
+  
+        <a ui-sref="home" class="navbar-brand"><span class="brand-title"><span class="fa fa-fire"></span> {{vm.gebruiker.naam}} {{vm.navline.title}} <span class="fa fa-bolt"></span></span></a>
         <a class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </a>
     </div>
+   
     <div class="navbar-collapse collapse">
+       
         <div class="pull-right navbar-logo">
             <ul class="nav navbar-nav pull-right">
+               
                 <li>
                     <a ng-href="{{vm.navline.link}}" target="_blank">
                         {{vm.navline.text}}
