--- a/src/client/app/layout/ht-top-nav.html
+++ b/src/client/app/layout/ht-top-nav.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="navbar-header">
   
-        <a ui-sref="home" class="navbar-brand"><span class="brand-title"><span class="fa fa-fire"></span> {{vm.gebruiker.naam}} {{vm.navline.title}} <span class="fa fa-bolt"></span></span></a>
+        <a ui-sref="home" class="navbar-brand"><span class="brand-title"><span class="fa fa-fire"></span> 
+        {{vm.gebruiker.naam}} {{vm.navline.title}} <span class="fa fa-bolt"></span></span></a>
         <a class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
