--- a/src/client/app/layout/shell.html
+++ b/src/client/app/layout/shell.html
@@ -1,19 +1,91 @@
-<div ng-controller="ShellController as vm">
-    <header class="clearfix">
+<!--<div ng-controller="ShellController as vm">-->
+<!--<header class="clearfix">
         <ht-top-nav navline="vm.navline"></ht-top-nav>
-    </header>
-    <section id="content" class="content">
-        <div ng-include="'app/layout/sidebar.html'"></div>
+    </header>-->
+<div>
+    <!--<div class="sidebar-widget"></div>
+    <ul class="navi">
+        <li class="nlightblue fade-selection-animation" ng-class="vm.isCurrent(r)" ng-repeat="r in vm.navRoutes">
+            <a ui-sref="{{r.name}}" ng-bind-html="r.settings.content"></a>
+        </li>
+    </ul>-->
 
-        <div ui-view class="shuffle-animation"></div>
 
-        <div ngplus-overlay
-             ngplus-overlay-delay-in="50"
-             ngplus-overlay-delay-out="700"
-             ngplus-overlay-animation="dissolve-animation">
-            <img src="images/busy.gif"/>
+    <md-sidenav class="site-sidenav md-sidenav-left md-whiteframe-z2" md-component-id="left" ng-click="ul.toggleList()" aria-label="Toon Menu"
+    md-is-locked-open="$mdMedia('gt-sm')">
 
-            <div class="page-spinner-message overlay-message">{{vm.busyMessage}}</div>
+        <md-toolbar class="md-whiteframe-z1">
+            <h3>Menu</h3>
+        </md-toolbar>
+
+        <md-list>
+            <md-list-item ng-repeat="r in vm.navRoutes">
+                <md-button ui-sref="{{r.name}}" ng-bind-html="r.settings.content"></md-button>
+
+            </md-list-item>
+        </md-list>
+
+    </md-sidenav>
+
+
+
+    <div flex layout="column" tabIndex="-1" role="main" class="md-whiteframe-z2">
+
+        <md-toolbar layout="row" class="md-whiteframe-z1">
+            <md-button id="main" class="menu" hide-gt-sm ng-click="ul.toggleList()" aria-label="Show User List">
+                <md-icon md-svg-icon="menu"></md-icon>
+            </md-button>
+            <h3>Angular Material - Starter App</h3>
+        </md-toolbar>
+
+        <md-content flex id="content">
+            <md-icon md-svg-icon="{{ul.selected.avatar}}" class="avatar"></md-icon>
+            <h2>{{ul.selected.name}}</h2>
+            <p>{{ul.selected.content}}</p>
+
+            <md-button class="contact" md-no-ink ng-click="ul.makeContact(ul.selected)" aria-label="Share with {{ ul.selected.name }}">
+                <md-tooltip>Contact {{ ul.selected.name }}</md-tooltip>
+                <md-icon md-svg-icon="share"></md-icon>
+            </md-button>
+        </md-content>
+    </div>
+</div>
+<!--</div>
+  -->
+
+<!-- Container #1 (in wireframe) -->
+<!--<md-toolbar layout="row" class="md-whiteframe-z2">
+
+            <h1>FirePower</h1>
+        </md-toolbar>
+    
+   
+      <!-- Container #2 (in wireframe) 
+        <div flex layout="row">
+
+            <!-- Container #3 (in wireframe) -->
+
+
+<!-- Container #4 (in wireframe) -->
+<!--<div ng-include="'src/stamgegevens/stamgegevens.html'">
+            <div ui-view ></div>
+              <div>
+            </div>
+            
         </div>
-    </section>
+    -->
+
+
+
+<section id="content" class="content">
+
+
+
+
+    <div ngplus-overlay ngplus-overlay-delay-in="50" ngplus-overlay-delay-out="700" ngplus-overlay-animation="dissolve-animation">
+        <img src="images/busy.gif" />
+
+        <div class="page-spinner-message overlay-message">{{vm.busyMessage}}</div>
+    </div>
+</section>
 </div>
