--- a/src/client/app/layout/sidebar.html
+++ b/src/client/app/layout/sidebar.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="SidebarController as vm">
+﻿<!--<div ng-controller="SidebarController as vm">
     <ht-sidebar when-done-animating="vm.sidebarReady()">
         <div class="sidebar-filler"></div>
         <div class="sidebar-dropdown"><a href="#">Menu</a></div>
@@ -13,4 +13,32 @@
             </ul>
         </div>
     </ht-sidebar>
+</div>-->
+<div ng-controller="SidebarController as vm">
+    <!--<div class="sidebar-widget"></div>
+    <ul class="navi">
+        <li class="nlightblue fade-selection-animation" ng-class="vm.isCurrent(r)" ng-repeat="r in vm.navRoutes">
+            <a ui-sref="{{r.name}}" ng-bind-html="r.settings.content"></a>
+        </li>
+    </ul>-->
+
+
+    <md-sidenav class="site-sidenav md-sidenav-left md-whiteframe-z2"
+      md-component-id="left"
+      ng-click="ul.toggleList()" aria-label="Toon Menu"
+      md-is-locked-open="$mdMedia('gt-sm')">
+
+    <md-toolbar class="md-whiteframe-z1">
+      <h3>Menu</h3>
+    </md-toolbar>
+
+        <md-list>
+            <md-list-item ng-repeat="r in vm.navRoutes">
+                <md-button ui-sref="{{r.name}}" ng-bind-html="r.settings.content"></md-button>
+              
+            </md-list-item>
+        </md-list>
+
+    </md-sidenav>
 </div>
+
